--- a/index.html
+++ b/index.html
@@ -39,15 +39,60 @@
                  </h1>
                 <button class="button__primary">Order Now</button>  
              </div>
-         </section>
-
+            </section>
+            <br>
+            <br>
+            <br>
          <!-- Explore Menu -->
          <section class="explore__menu__container">
              <h1 class="explore__menu__text">Explore Our Menu</h1>
+             <div class="explore__menu__gradient__bg"></div>
              <div class="explore__menu__lists">
-                 
-             </div>
-         </section>
-     </main>
-</body>
+
+                 <!-- Burgur -->
+                 <div class="food__card">
+                   <div class="food__card__image__container">
+                      <img src="./assets/burger.jpg" alt="burgur" class="food__image">
+                    </div>
+                    <div class="food__card__description">
+                       <h3 class="food__title">Burger</h3>
+                       <p>
+                           Burger King, Mcdonalds, Burger Place
+                     <span style="color: red"> +3</span>
+                 </p> 
+               </div>
+              </div>
+               <!-- Pizza -->
+               <div class="food__card" id="pizza__card">
+                <div class="food__card__image__container">
+                   <img src="./assets/pizza.jpg" alt="pizza" class="food__image">
+                 </div>
+                 <div class="food__card__description">
+                    <h3 class="food__title">Pizza</h3>
+                    <p>
+                        Pizza Hurt, Domino's pizza
+                  <span style="color: red"> +3</span>
+              </p> 
+            </div>
+           </div>
+            <!-- Ice Cream -->
+            <div class="food__card">
+                <div class="food__card__image__container">
+                   <img src="./assets/iceCream.jpg" alt= "ice cream" class="food__image">
+                 </div>
+                 <div class="food__card__description">
+                    <h3 class="food__title">Ice cream</h3>
+                    <p>
+                        Baskin Robins, Ibaco
+                  <span style="color: red"> +3</span>
+              </p> 
+            </div>
+           </div>
+        </div>
+        <div class="explore__menu__view__more">
+         <button class="button__primary">View More</button>
+        </div> 
+       </section>
+    </main>
+  </body>
 </html> 
